Chapter 3 — Listing 3.13: PolymorphicCapabilities.java Demonstrates: composing polymorphic behavior through interfaces on a record,